<resources>
    <string name="app_name">test</string>
    <string name="a_human_memory_education_and_rehabilitation_tool">A Human Memory education and rehabilitation tool</string>
    <string name="next">Next</string>
    <string name="welcome_to_muscle_memory_a_human_memory_education_and_rehabilitation_tool_this_application_will_provide_you_with_information_and_education_on_the_subject_of_human_memory_there_will_also_be_games_and_quizzes_that_will_help_enhance_your_memory">Welcome to Muscle Memory - A Human Memory education and rehabilitation tool! This application will provide you with information and education on the subject of human memory. There will also be games and quizzes that will help enhance your memory! \n \n This application will also help you with day to day activities, such as setting reminders for events, using a digital calendar and resources to learn more about strategies to protect you from cognitive decline </string>
    <string name="this_application_will_also_help_you_with_day_to_day_activities_such_as_setting_reminders_for_events_using_a_digital_calendar_and_resources_to_learn_more_about_strategies_to_protect_you_from_cognitive_decline">This application will also help you with day to day activities, such as setting reminders for events, using a digital calendar and resources to learn more about strategies to protect you from cognitive decline</string>
    <string name="muscle_memory">Muscle Memory</string>
    <string name="go_back">Go Back</string>
    <string name="moreInfo">This application was made as part of a Computer Science and Software Engineering final year project. It should not be used to diagnose any memory problems. If you are worried about any memory related issues, please contact your GP. The information used in this application is verified by evidence based research.</string>
    <string name="learnMore">If you feel you are struggling with memory related issues, you should contact your GP at the earliest convenience. There are many resources online available that you can make use of, such as https://alzheimer.ie/get-support/resources-and-factsheets/ https://www.understandtogether.ie/  and https://www.alz.org/help-support/caregiving</string>
    <string name="tip1">Get a large wall calendar and hang it up in a prominent place at home. Get in a routine of adding appointments, birthdays etc.. on a daily basis!</string>
    <string name="tip2">Be sure to get at least 7 hours sleep! Sleep helps in recalling facts and information as well as in procedural memory formation - the aspect of memory involved in learning new skills faster.</string>
    <string name="tip3">Have a card in your work area with a simple message on it like "Focus on what to do!" This can help you to avoid drifting off </string>
    <string name="tip4">If you feel that you are being overloaded - especially in a conversation with someone, ask the person to slow down with the information or repeat what they have said.</string>
    <string name="tip5">Work at your best time - work at the time of day when you are most alert and focused (For most people, this is the morning!)</string>
    <string-array name="tipsy">
        <item>Get a large wall calendar and hang it up in a prominent place at home. Get in a routine of adding appointments, birthdays etc.. on a daily basis!</item>
        <item>Be sure to get at least 7 hours sleep! Sleep helps in recalling facts and information as well as in procedural memory formation - the aspect of memory involved in learning new skills faster.</item>
        <item>Have a card in your work area with a simple message on it like "Focus on what to do!" This can help you to avoid drifting off.</item>
        <item>If you feel that you are being overloaded - especially in a conversation with someone, ask the person to slow down with the information or repeat what they have said.</item>
        <item>Work at your best time - work at the time of day when you are most alert and focused (For most people, this is the morning!)</item>
        <item>If you are worried that you will not be able to know todays date when you are checking the calendar, you can also get in the habit of ticking off the day that has just been completed on your calendar before you go to bed.</item>
        <item>Try to work in a quiet environment with no background distractions, such as noisy televisions or people talking. This will help improve your concentration.</item>
        <item>Let people know they should try not to interrupt you when you are working. This will help improve your concentration.</item>
        <item>Take frequent breaks! If the problem is made worse by fatigue, work for shorter periods of time. Periods up to 30 minutes tend to be more productive.</item>
        <item>Talk to yourself - Saying things out loud, like "What should I be doing now? or "Stay focused!" can help yourself to stay on the right track. </item>
        <item>Concentrate on one thing at a time - taking in or trying to do too many things at once leads to mistakes. Do one thing well, then move on to the next thing.</item>
        <item>Do not rush things - Take your time and pace yourself. Rushing leads to mistakes!</item>
        <item>Make a plan - keep a record - or break things down into manageable parts. If you do get distracted, you can easily pick up from where you left off if you have organisation and structure.</item>
        <item>Check and double check your work. It will be slow and hard at first, but it will become a habit as you get accustomed to it. This is the only sure-fire way of picking up on your own errors.</item>
        <item>Listen really attentively to the headlines on the news and see how much of the details you can really absorb accurately and then relay back to others - Test yourself each day!</item>
        <item>When taking a telephone message, listen carefully to the person giving the message, repeat the message with the person on the other end of the phone and write it down as soon as possible!</item>
        <item>When asking for directions, listen carefully to the person giving directions - also watch carefully if they are pointing in order to recall the directions. Confirm the directions with the person.</item>
        <item>Repeat information over and over, silently in your mind.</item>
        <item>Try to attach new information to existing memories - it helps to process the new information more deeply.</item>
        <item>Have a key ring by the door where you always hang your keys.</item>
        <item>Have a special place to keep your wallet and glasses.</item>
        <item>Have a filing system for bills and legal documents, and a tray for bills and letters!</item>
        <item>Place items strategically e.g put letters that you plan to post by the front door.</item>
        <item>Set up electronic reminders! For instance, you can create email or text alerts to signal it is time to take your medicine.</item>
        <item>Make a link of taking whatever medication you may take with an activity you do every day, such as making coffee or brushing your teeth. This works much better than taking medication in the midst of other activities.</item>
        <item>Setting a daily alarm can be helpful, especially if you struggle with timing requirements.</item>
        <item>Make a point of noticing when you take your medication. For instance, before taking your pill, pause, look at it in your hand, and tell yourself that you are taking the pill now. You will have a specific memory trace to todays dose.</item>
        <item>If you are just starting your medication, leave it out in an easy to spot space.</item>
        <item>When attending an appointment place your bag in front of you rather thank behind you to prevent forgetting it.</item>
        <item>Make lists! such as shopping lists, or lists to help organize the day.</item>
        <item>Have reminder notes in the kitchen, such as turn off the cooker or put away the milk!</item>
        <item>Write on the back of your hand - just a letter of the alphabet can often be enough to trigger you to remember something important you meant to do.</item>
        <item>Make ip a story or rhyme that contains information that you want to remember.</item>
        <item>Repeat the information in your mind immediately after you have taken it in - test yourself after a slight delay - increase the delay by a few hours - test yourself after a few days.</item>
        <item>Adapt your environment - keep a notepad and pen by the telephone, put up a notice board and label cupboards and doors.</item>
        <item>It is important to reduce anxiety, stress and depression - they make memory difficulties worse. Talk about your difficulties to friends and family.</item>
        <item>Put effort into maintaining friendships and developing new friendships.</item>


    </string-array>
    <string-array name="attention1">
        <item>Attention is the basis of all new learning and memory.</item>
        <item>Attention generally explains our ability to focus and hold attention on words on a page, a conversation, music, or traffic on the road when we are driving.</item>
        <item>People with attention problems often complain that they can no longer concentrate on reading books, do tasks and maintain a conversation at the same time, or they may have difficulty studying for any length of time.</item>
        <item>Attention helps us to select specific information and decide what information is important and what is not.</item>

    </string-array>
    <string-array name="attention2">
        <item>There are different types of attention: </item>
        <item>Focused attention - Our ability to respond immediately to a stimulus - e.g. turning your head when someone calls your name, fixing your gaze on something interesting (e.g. a street performer among a busy crowd).</item>
        <item>Sustained attention - Our capacity to maintain our focus on specific stimuli - e.g. listening carefully to a telephone message or to a lecture.</item>
        <item>Selective attention - Our ability to filter out distractions and select important information - e.g. listening out for our flight details in the airport, whilst filtering out all the other announcements and distractions in the busy airport.</item>
        <item>Divided Attention - The ability to pay attention to two or more things at the same time e.g. watching the news on TV, whilst knitting and keeping and eye on the children playing on the floor. Or speaking on the phone, whilst typing and listening to music in the background.</item>
    </string-array>
</resources>